[project]
name = "grawlix"
authors = [
    { name = "Joakim Holm", email = "mail@joakimholm.xyz" }
]
description = "CLI tool for downloading ebooks"
readme = "README.md"
keywords = ["ebook", "cli", "downloader"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "appdirs",
    "beautifulsoup4",
    "blackboxprotobuf",
    "EbookLib",
    "httpx",
    "importlib-resources",
    "lxml",
    "pycryptodome",
    "rich",
    "tomli",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/jo1gi/grawlix"
"Bugtracker" = "https://github.com/jo1gi/grawlix/issues"

[project.scripts]
grawlix = "grawlix.__main__:run"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {attr = "grawlix.__version__"}

[tool.setuptools.package-data]
grawlix = ["*.txt"]


[tool.mypy]
ignore_missing_imports = true
allow_untyped_globals = false
disallow_untyped_calls = true
